fixup! fixup! fixup! ZOOKEEPER-3475: Enable checkstyle configuration on zookeeper-server